force-app/main/default/objects/Apttus_Config2__ProductFootnote__c/Apttus_Config2__ProductFootnote__c.object-meta.xml
<CustomObject>
    <description>Represents the footnote available in a product or option</description>
    <label>Product Footnote</label>
    <nameField>
        <displayFormat>PF-{000000}</displayFormat>
        <label>Footnote Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Footnotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>