force-app/main/default/objects/Apttus_Config2__ProductFootnote__c/fields/Apttus_Config2__FootnoteId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__FootnoteId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated footnote</description>
    <inlineHelpText>ID of the associated footnote</inlineHelpText>
    <label>Footnote</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Apttus_Config2__Footnote__c.Apttus_Config2__Type__c</field>
            <operation>equals</operation>
            <value>Product</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Apttus_Config2__Footnote__c</referenceTo>
    <relationshipLabel>Product Footnotes</relationshipLabel>
    <relationshipName>ProductFootnotes</relationshipName>
    <type>Lookup</type>
</CustomField>