force-app/main/default/objects/Apttus_Config2__ProductFootnote__c/fields/Apttus_Config2__ProductId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the product/option associated with the footnote</description>
    <inlineHelpText>ID of the product/option associated with the footnote</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Footnotes</relationshipLabel>
    <relationshipName>ProductFootnotes</relationshipName>
    <type>Lookup</type>
</CustomField>